NetBSD Problem Report #51283

From www@NetBSD.org  Mon Jun 27 07:49:15 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 2AE097A2AE
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 27 Jun 2016 07:49:15 +0000 (UTC)
Message-Id: <20160627074913.F193E7AAC0@mollari.NetBSD.org>
Date: Mon, 27 Jun 2016 07:49:13 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Logical error in mpfr vasprintf.c
X-Send-Pr-Version: www-1.0

>Number:         51283
>Category:       toolchain
>Synopsis:       Logical error in mpfr vasprintf.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jun 27 07:50:00 +0000 2016
>Closed-Date:    Mon Jun 27 11:37:55 +0000 2016
>Last-Modified:  Mon Jun 27 11:40:01 +0000 2016
>Originator:     Henning Petersen
>Release:        Netbsd-current
>Organization:
>Environment:
>Description:
Logical error.
The mpfr bug was fixed in mpfr's trunk (r8705).
Report: (https://sympa.inria.fr/sympa/arc/mpfr/2013-11/msg00009.html)

>How-To-Repeat:

>Fix:
diff -u -p -r1.1.1.1 vasprintf.c
--- external/lgpl3/mpfr/dist/src/vasprintf.c	28 Nov 2013 12:30:54 -0000	1.1.1.1
+++ external/lgpl3/mpfr/dist/src/vasprintf.c	27 Jun 2016 07:00:34 -0000
@@ -1559,7 +1559,7 @@ partition_number (struct number_parts *n
             /* fractional part */
             {
               np->point = MPFR_DECIMAL_POINT;
-              np->fp_trailing_zeros = (spec.spec == 'g' && spec.spec == 'G') ?
+              np->fp_trailing_zeros = (spec.spec == 'g' || spec.spec == 'G') ?
                 spec.prec - 1 : spec.prec;
             }
           else if (spec.alt)

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: toolchain-manager->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Mon, 27 Jun 2016 11:37:55 +0000
Responsible-Changed-Why:
Take


State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 27 Jun 2016 11:37:55 +0000
State-Changed-Why:
Applied, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51283 CVS commit: src/external/lgpl3/mpfr/dist/src
Date: Mon, 27 Jun 2016 11:35:21 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Jun 27 11:35:21 UTC 2016

 Modified Files:
 	src/external/lgpl3/mpfr/dist/src: vasprintf.c

 Log Message:
 Apply upstream r8705: fix logic error.
 Reported by Henning Petersen in PR toolchain/51283.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1 -r1.2 src/external/lgpl3/mpfr/dist/src/vasprintf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.