Apply upstream r8705: fix logic error. Reported by Henning Petersen in PR toolchain/51283.